public/css/main.css
/* Color theme
black: #262422
grey: #565853
green: #4D9154
red: #C04B4B
white: #DCD9CD
 */

body {
    background-color: #262422;
    font-family: 'Ropa Sans', sans-serif;
}

body a {
    color: #DCD9CD;
    font-family: 'Ropa Sans', sans-serif;
}

body input {
    font-family: 'Ropa Sans', sans-serif;
}

button {
  outline: none;
}

#facePublisher, #screenPublisher {
    width: 160px;
    height: 100px;
    display: block;
    position: absolute;
    cursor: move;
    cursor: -webkit-grab;
    cursor: -moz-grab;
    border-radius: 5px;
    z-index: 99;
    transition: width 200ms, height 200ms ease;
}

#facePublisher {
    top: 10px;
    right: 10px;
}

#screenPublisher {
    top: 30px;
    left: 30px;
}

#facePublisher ot-publisher {
    width: 100%;
    height: 100%;
    padding: 0;
    margin: 0;
}

#facePublisher:active, #screenPublisher:active {
  cursor: -webkit-grabbing;
  cursor: -moz-grabbing;
}

#session {
    display: block;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}
ot-layout ot-subscriber {
    background-color: #262422;
    display: inline-block;
}
ot-layout {
    display: block;
    width: 100%;
    height: 100%;
}

ot-layout button.resize-btn, ot-layout button.restrict-framerate-btn, ot-layout subscriber-stats {
    transition-property: top,bottom,opacity;
    transition-duration: .5s;
    transition-timing-function: ease-in;
    opacity: 0;
    top: -25px;
    position: absolute;
    z-index: 99;
    font-size: 27px;
}

ot-layout button.resize-btn, ot-layout button.restrict-framerate-btn {
    width: 25px;
    height: 25px;
    cursor: pointer;
    background-color: transparent;
    margin-top: 2px;
    right: 38px;
    border: none;
}

ot-layout ot-subscriber button.restrict-framerate-btn {
    right: 95px;
}

ot-layout ot-subscriber subscriber-stats {
    left: 0px;
}

ot-layout > .OT_big button.resize-btn:before {
    content: "\f267";
}

ot-layout button.restrict-framerate-btn.ion-ios7-speedometer-outline {
    -moz-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
    filter: FlipH;
    -ms-filter: "FlipH";
}

ot-layout > :hover button.resize-btn, ot-layout > :hover button.restrict-framerate-btn,
    ot-layout > :hover subscriber-stats, ot-layout button.OT_mode-on ~ subscriber-stats,
    ot-layout button.OT_mode-on ~ button.resize-btn,
    ot-layout button.OT_mode-on ~ button.restrict-framerate-btn {
    top: 0;
    opacity: 1;
}

ot-whiteboard:not(.ng-hide), ot-editor:not(.ng-hide) {
  display: block;
}

ot-whiteboard {
    display: none;
    background-color: #DCD9CD;
}

ot-editor {
    display: none;
    background-color: #DCD9CD;
    padding: 0;
}

ot-editor .CodeMirror {
    background-color: #DCD9CD;
}

ot-editor > div.opentok-editor-connected {
  width: 100%;
  height: 100%;
  height: calc(100% - 20px);
  position: absolute;
  top: 0;
  left: 0;
  margin-top: 20px;
}

ot-editor > div.opentok-editor-mode-select {
  float: none;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 10;
}

#bottomBar {
  transition: opacity 200ms ease;
  opacity: 0;
  width: 100%;
  left: 0;
  bottom: 20px;
  pointer-events: none;
  position: absolute;
  text-align: center;
  z-index: 98;
}

button.icon-left:before {
    font-family: "Ionicons";
    padding-right: 8px;
    padding-left: 0;
}

#bottomBar .unread-indicator {
    display: inline-block;
}

@-webkit-keyframes whitePulse {
    from { -webkit-box-shadow: 0 0 9px #333; -moz-box-shadow: 0 0 9px #333; box-shadow: 0 0 9px #333; }
    50% { -webkit-box-shadow: 0 0 18px #DCD9B5; -moz-box-shadow: 0 0 18px #DCD9B5; box-shadow: 0 0 18px #DCD9B5;}
    to { -webkit-box-shadow: 0 0 9px #333; -moz-box-shadow: 0 0 9px #333; box-shadow: 0 0 9px #333; }
}

#bottomBar .unread-indicator span.indicator {
    display: none;
    width: 10px;
    height: 10px;
    border-radius: 50%;
    background-color: #C04B4B;
    border: 1px solid #DCD9B5;
    margin-left: -5px;
    margin-top: -38px;
    position: relative;
    -webkit-animation-name: whitePulse;
    -webkit-animation-duration: 1s;
    -webkit-animation-iteration-count: infinite;
}

#bottomBar .unread-indicator.unread span.indicator {
    display: block;
}

#bottomBar button {
    cursor: pointer;
    border: none;
    border-radius: 5px;
    color: #DCD9B5;
    font-size: 22px;
    -webkit-appearance: none;
    font-family: 'Ropa Sans', sans-serif;
    transition: width 200ms, height 200ms ease;
    padding-left: 14px;
    padding-top: 5px;
    pointer-events: auto;
}

#bottomBar #publishHDCheck {
    color: #DCD9CD;
    position: relative;
    left: -50px;
    top: -4px;
    vertical-align: middle;
}

#bottomBar #publishHDCheck input[type="checkbox"] {
    position: absolute;
    top: -2px;
}

button.green {
    background-color: #4D9154;
}

button.red {
    background-color: #C04B4B;
}

button.unread {

}

button:disabled {
    background-color: #565853;
    color: #ccc;
    cursor: auto;
}

#shareInfo, #reconnectingOverlay {
    font-size: 18px;
    color: #DCD9CD;
    text-align: center;
    width: 550px;
    padding: 10px;
    border-radius: 5px;
    background-color: #565853;
    top: 35%;
    position: absolute;
    left: 50%;
    margin-left: -285px;
    transition: width 200ms, height 200ms ease;
    z-index: 97;
}

#loader {
    width: 32px;
    height: 32px;
    position: absolute;
    left: 50%;
    top: 50%;
    margin-left: -16px;
    margin-top: -16px;
    color: #DCD9CD;
    font-size: 32px;
    font-weight: bold;
}


#bottomBar #publishBtn.green {
    text-align: left;
    width: 85px;
}

.statusMessage {
    background-color: #565853;
    width: 100%;
    border-radius: 5px;
    text-align: center;
    vertical-align: middle;
    padding: 10px 0 10px 0;
    color: #DCD9CD;
    margin-bottom: 5px;
    padding: 10px;
}

#statusMessages {
    transition: opacity 200ms ease;
    opacity: 0;
    position: absolute;
    width: 465px;
    left: calc(50% - 242.5px);
    bottom: 80px;
    z-index: 98;
}

@media screen and (max-width: 650px) {
  #facePublisher, #screenPublisher {
      width: 89px;
      height: 50px;
  }

  #shareInfo, #reconnectingOverlay {
      width: 250px;
      left: 50%;
      margin-left: -135px;
  }

  #statusMessages {
      width: 340px;
      left: calc(50% - 180px);
  }
}

@media only screen and (orientation: portrait) {
    #facePublisher, #screenPublisher {
        width: 100px;
        height: 150px;
    }
}

@media only screen and (orientation: portrait) and (max-width: 650px) {
    #facePublisher, #screenPublisher {
        width: 50px;
        height: 75px;
    }
}

#footer {
    position: absolute;
    opacity: 0;
    bottom: 15px;
    right: 15px;
    font-size: 15px;
    transition: opacity 200ms ease;
    z-index: 98;
}

#screenShareUnsupported {
    opacity: 0;
    transition: opacity 200ms ease;
}

#bottomBar:hover ~ #statusMessages > #screenShareUnsupported {
    opacity: 1;
}

#connCount {
    color: #DCD9CD;
    opacity: 0;
    font-size: 15px;
    position: absolute;
    left: 15px;
    bottom: 15px;
    transition: opacity 200ms ease;
}

body.mouse-move #bottomBar, body.mouse-move #statusMessages, body.mouse-move #connCount,
  body.mouse-move #footer {
  opacity: 1;
}

/* Mute Video Directive */
mute-video {
    color: white;
    cursor: pointer;
    position: absolute;
}

#facePublisher mute-video {
    bottom: -14px;
    left: -7px;
    z-index: 100;
    transition: opacity 500ms ease-in;
    opacity: 0;
}

#facePublisher:hover mute-video {
    opacity: 1;
}

mute-video .video-icon {
    font-size: 20px;
    padding: 0;
    margin: 0;
}

mute-video .cross-icon {
    font-size: 10px;
    position: absolute;
    left: 1.5px;
    color: black;
    top: 4px;
}

ot-subscriber mute-video {
    position: absolute;
    transition-property: top,bottom,opacity;
    transition-duration: .5s;
    transition-timing-function: ease-in;
    opacity: 0;
    top: -25px;
    right: 65px;
    margin-top: 2px;
    z-index: 99;
}

ot-layout > :hover mute-video, ot-layout button.OT_mode-on ~ mute-video {
    top: 0;
    opacity: 1;
}

ot-subscriber mute-video .video-icon {
    font-size: 32px;
}

ot-subscriber mute-video .cross-icon {
    font-size: 17px;
    top: 7px;
    left: 2px;
}

